# ffmpeg_fdk_aac

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/audio/: dump10.aac  dump100.aac  dump101.aac  dump102.aac  dump103.aac  dump104.aac  dump105.aac  dump106.aac  dump107.aac  dump108.aac  dump109.aac  dump11.aac  dump110.aac  dump111.aac  dump112.aac  dump113.aac  dump114.aac  dump115.aac  dump116.aac  dump117.aac  dump118.aac  dump119.aac  dump12.aac  dump120.aac  dump121.aac  dump122.aac  dump123.aac  dump124.aac  dump125.aac  dump126.aac  dump127.aac  dump128.aac  dump129.aac  dump13.aac  dump130.aac  dump131.aac  dump132.aac  dump133.aac  dump134.aac  dump135.aac  (+608 more)
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: AudioDecoder.cpp  AudioDecoder.h  DecodeFaac.cpp  Log.h  PacketQueue.cpp  PacketQueue.h  fdkaccdec.cpp
app/src/main/java/com/airplay/aac/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
